<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/icono_estrella"
        android:icon="@drawable/icono_estrella"
        android:orderInCategory="98"
        android:title="@string/icono_estrella"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/icono_refresh"

        android:icon="@drawable/icono_refresh"
        android:orderInCategory="102"
        android:title="@string/icono_refresh"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_contacto"
        android:title="@string/menu_contacto"
        android:orderInCategory="100"/>
    <item
        android:id="@+id/menu_acerca_de"
        android:title="@string/menu_acerca_de"
        android:orderInCategory="101"/>



</menu>