<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BioDesarrollador">

    <include
        android:id="@+id/miActionBar"
        layout="@layout/actionbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTituloDesarrollador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margen_predeterminado"
        android:layout_marginLeft="@dimen/margen_predeterminado"
        android:layout_marginTop="@dimen/margen_predeterminado"
        android:layout_marginEnd="@dimen/margen_predeterminado"
        android:layout_marginRight="@dimen/margen_predeterminado"
        android:text="@string/titulo_desarrollador"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/miActionBar" />

    <TextView
        android:id="@+id/tvNombreDesarrollador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margen_predeterminado"
        android:layout_marginLeft="@dimen/margen_predeterminado"
        android:text="@string/nombre_desarrollador"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/ivFotoPerfil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivFotoPerfil" />

    <TextView
        android:id="@+id/tvDescripcionDesarrollador"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margen_predeterminado"
        android:layout_marginLeft="@dimen/margen_predeterminado"
        android:layout_marginTop="@dimen/margen_predeterminado"
        android:layout_marginEnd="@dimen/margen_predeterminado"
        android:layout_marginRight="@dimen/margen_predeterminado"
        android:layout_marginBottom="@dimen/margen_predeterminado"
        android:justificationMode="inter_word"
        android:text="@string/descripcion_desarrollador"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivFotoPerfil" />

    <ImageView
        android:id="@+id/ivFotoPerfil"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="@dimen/margen_predeterminado"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloDesarrollador"
        tools:src="@drawable/icono_persona" />

</androidx.constraintlayout.widget.ConstraintLayout>